# ipmesctool

./: package.json  tsconfig.json
.github/workflows/: publish.yml
src/: App.css  App.tsx  motor.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: command.rs  config_parser.rs  error.rs  exit_signal.rs  invokes.rs  lib.rs  main.rs  motor.rs  serial.rs
src/components/: angle.tsx  app-sidebar.tsx  debug-run-console.tsx  device.tsx  input-line.tsx  motor-state.tsx  numeric-expression-input.tsx  refresh-config-button.tsx  save-config-button.tsx  unit.tsx
src/components/plot/: waveform-container.tsx  waveform-control-panel.tsx  waveform-plot.tsx
src/lib/: utils.ts
src/pages/: calibration.tsx  chart.tsx  device-info.tsx  encoder-config.tsx  pid-config.tsx  serial-console.tsx
src/stores/: angle.ts  feedback.ts  motor.ts  page.ts
